--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "to-bless",
+    "name": "ToBless",
     "version": "17.0.0",
     "scripts": {
         "ng": "ng",
@@ -26,6 +26,7 @@
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
         "chart.js": "^3.3.2",
+        "jwt-decode": "^4.0.0",
         "primeflex": "^3.3.1",
         "primeicons": "6.0.1",
         "primeng": "17.2.0",
