--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -17,7 +17,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/atlantis-ng",
+                        "outputPath": "dist/frontend",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": [
