Feat: Add confetti celebration animation on successful booking creation

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
+    "canvas-confetti": "^1.9.4",
     "chart.js": "^3.3.2",
     "jwt-decode": "^4.0.0",
     "primeflex": "^3.3.1",
