--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@angular-devkit/build-angular": "^17.3.17",
     "@angular/cli": "^17.3.17",
     "@angular/compiler-cli": "^17.3.12",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/jasmine": "~4.3.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.2",
