--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ theme.css
 layout.css
 # Snyk Security Extension - AI Rules (auto-generated)
 .cursor/rules/snyk_rules.mdc
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
